# agentprobe-framework

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  agentprobe.yaml.example  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
changelog/: index.html
demo/: index.html
demo-site/: index.html  package-lock.json  package.json  vite.config.ts
demo-site/src/: App.tsx  index.css
demo-site/src/components/: AnimatedCounter.tsx  BudgetGauge.tsx  GlowCard.tsx  Icons.tsx  Logo.tsx  Navbar.tsx  RuleToggle.tsx  ScoreBar.tsx  TraceSummary.tsx  TraceTimeline.tsx  VerdictBadge.tsx
demo-site/src/data/: costData.ts  evaluatorData.ts  sampleTrace.ts
demo-site/src/pages/: CostDashboard.tsx  Evaluator.tsx  Landing.tsx  TraceViewer.tsx
demo/assets/: index-Bt9-ctcJ.css  index-Dg1dZWbR.js  index-Hm3IqfcW.css  index-oCz5manV.js
docs/: changelog.md  index.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: ci-cd-integration.md  cost-management.md  custom-evaluators.md  evaluators.md  multi-agent-testing.md  regression-testing.md  safety-testing.md  writing-tests.md
docs/plugins/: creating-plugins.md  overview.md  plugin-types.md
docs/reference/: adapters.md  cli.md  config.md
docs/reference/api/: adapters.md  core.md  cost.md  eval.md  metrics.md  plugins.md  regression.md  reporting.md  safety.md  security.md  storage.md  testing.md  trace.md
examples/: basic_test.py  conversation_testing.py  cost_management.py  custom_adapter.py  dashboard_client.py  metrics_trending.py  plugin_creation.py  regression_testing.py  safety_testing.py  test_real_agent.py
examples/.github/workflows/: agent-tests.yml
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/ci-cd-integration/: index.html
guides/cost-management/: index.html
guides/custom-evaluators/: index.html
guides/evaluators/: index.html
guides/multi-agent-testing/: index.html
guides/regression-testing/: index.html
guides/safety-testing/: index.html
guides/writing-tests/: index.html
plugins/creating-plugins/: index.html
plugins/overview/: index.html
plugins/plugin-types/: index.html
reference/adapters/: index.html
reference/api/adapters/: index.html
reference/api/core/: index.html
reference/api/cost/: index.html
reference/api/eval/: index.html
reference/api/metrics/: index.html
reference/api/plugins/: index.html
reference/api/regression/: index.html
reference/api/reporting/: index.html
reference/api/safety/: index.html
reference/api/security/: index.html
reference/api/storage/: index.html
reference/api/testing/: index.html
reference/api/trace/: index.html
reference/cli/: index.html
reference/config/: index.html
search/: search_index.json
src/agentprobe/: __init__.py  pytest_plugin.py  testing.py
src/agentprobe/adapters/: __init__.py  autogen.py  base.py  crewai.py  gemini.py  langchain.py  mcp.py  openai_agents.py
src/agentprobe/cli/: __init__.py  main.py
src/agentprobe/core/: __init__.py  assertions.py  chaos.py  config.py  conversation.py  discovery.py  exceptions.py  models.py  protocols.py  runner.py  scenario.py  snapshot.py
src/agentprobe/cost/: __init__.py  budget.py  calculator.py
src/agentprobe/dashboard/: __init__.py  app.py  dependencies.py  schemas.py
src/agentprobe/eval/: __init__.py  base.py  embedding.py  llm_judge.py  rules.py  statistical.py  trace_compare.py
src/agentprobe/metrics/: __init__.py  aggregator.py  collector.py  definitions.py  trend.py
src/agentprobe/plugins/: __init__.py  base.py  loader.py  manager.py  registry.py
src/agentprobe/regression/: __init__.py  baseline.py  detector.py
src/agentprobe/reporting/: __init__.py  csv_reporter.py  html.py  json_reporter.py  junit.py  markdown.py  terminal.py
src/agentprobe/safety/: __init__.py  scanner.py
src/agentprobe/security/: __init__.py  audit.py  encryption.py  pii.py
src/agentprobe/storage/: __init__.py  migrations.py  postgres.py  sqlite.py
src/agentprobe/trace/: __init__.py  diff.py  recorder.py  replay.py  time_travel.py
tests/: __init__.py  conftest.py
tests/e2e/: conftest.py  test_autogen_e2e.py  test_cost_live.py  test_crewai_e2e.py  test_langchain_e2e.py  test_mcp_e2e.py  test_system_e2e.py
tests/fixtures/: __init__.py  agents.py  regression.py  results.py  safety.py  traces.py
tests/integration/: conftest.py  test_cli_e2e.py  test_cost_budget_flow.py  test_metrics_flow.py  test_plugin_lifecycle.py  test_regression_flow.py  test_runner_pipeline.py  test_safety_flow.py  test_trace_pipeline.py
tests/unit/: __init__.py  test_pytest_plugin.py  test_testing.py  test_xdist_compat.py
tests/unit/adapters/: test_autogen.py  test_base.py  test_crewai.py  test_gemini.py  (+3 more)
(+107 files in other folders)
